Moving component/Navbar.jsx to src temporary because of update page bug Color palette integration (use for dark mode later)

--- a/dev/src/css/App.css
+++ b/dev/src/css/App.css
@@ -8,3 +8,8 @@
     height: 100%;
     width: 100%;
 }
+
+a{
+    text-decoration: none;
+    color: #000;
+}
